syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.dpunkt.myaktion";
option java_outer_classname = "MyAktionProto";


message Donation {
    double amount = 1;
    string donorName = 2;
}

service MyaktionMonitorService {
    rpc SendDonation(DonationRequest) returns (DonationResponse) {}
}

message DonationRequest {
    int64 campaignId = 1;
    Donation donation = 2;
}

message DonationResponse {
    string message = 1;
}
